adding class and function defintions to documentation

--- a/genindex.html
+++ b/genindex.html
@@ -35,19 +35,149 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#F"><strong>F</strong></a>
+ <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv322compute_matrix_elementiiiiiiiiP7ph_modeP14anharmonic_ifciPdPPd">compute_matrix_element (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv318compute_triple_pdtPPd">compute_triple_pdt (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv35deltadd">delta (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv35df_FDddd">df_FD (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#electrons">electrons() (built-in function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    Finding Scattering Events
-
-      <ul>
-        <li><a href="Supplementary.html#index-0">Classes and Functions</a>
+      <li><a href="Functions Supplementary.html#_CPPv34f_BEdd">f_BE (C++ function)</a>
 </li>
-      </ul></li>
+      <li><a href="Functions Supplementary.html#_CPPv34f_FDddd">f_FD (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#fermi_integrate">fermi_integrate() (built-in function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#fermi_step">fermi_step() (built-in function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv314find_eph_indexiiiiiP5el_phiP7ph_mode">find_eph_index (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv315find_k_pt_indexdddiii">find_k_pt_index (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv315find_q_pt_indexdddiii">find_q_pt_index (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#get_valence">get_valence() (built-in function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#holes">holes() (built-in function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv310multiply_cddddRdRd">multiply_c (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv38read_eigP7ph_modeiiPdi">read_eig (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv331read_eph_matrix_elements_binaryRP5el_phRiP7ph_mode">read_eph_matrix_elements_binary (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv310read_fermiv">read_fermi (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv312read_lat_vecRPPdRd">read_lat_vec (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv311read_massesRPdi">read_masses (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv311read_omegaqRP7ph_modeRiRiRiRiRiRi">read_omegaq (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv319read_reciprocal_latRPPd">read_reciprocal_lat (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv320read_third_order_ifcRP14anharmonic_ifcRii">read_third_order_ifc (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv310to_string1i">to_string1 (C++ function)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv38write_EkP7el_modeii">write_Ek (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv321write_eph_scat_eventsP7ph_modeii">write_eph_scat_events (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv312write_massesPdi">write_masses (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv317write_occupationsP7ph_modeiii">write_occupations (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="Functions Supplementary.html#_CPPv312write_omegaqP7ph_modeii">write_omegaq (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv317write_phase_spaceP7ph_modeii">write_phase_space (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv324write_scat_events_binaryP7ph_modeiiRi">write_scat_events_binary (C++ function)</a>
+</li>
+      <li><a href="Functions Supplementary.html#_CPPv321write_third_order_ifcP14anharmonic_ifci">write_third_order_ifc (C++ function)</a>
+</li>
   </ul></td>
 </tr></table>
 
